--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "ipywidgets>=8.1.5",
     "numpy>=2.2.1",
+    "pymeshfix>=0.17.0",
     "pyvista[jupyter]>=0.44.2",
     "rasterio>=1.4.3",
     "tqdm>=4.67.1",
